examples/test/testpolicy18463.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18463
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key8: value40
      key35: value48
      key49: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value8
          key17: value15
          key42: value28
      podSelector:
        matchLabels:
          key37: value22
